# lqp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  clang-format.sh  clang-tidy.sh  lqpConfig.cmake  xmake.lua
.github/workflows/: build.yml
cmake/: FindGLPK.cmake  FindGurobi.cmake
examples/: glpk_example.cc
include/lqp/: Api.h  Expr.h  GlpkSolver.h  Inequality.h  Instance.h  Problem.h  Solution.h  Solver.h  Variable.h
